--- a/content/labs/lab05.textile
+++ b/content/labs/lab05.textile
@@ -1,142 +1,81 @@
 ---
-title:  Lab 05
+title:  Lab 04
 layout: default
 
 filter:
   - erb
   - textile
-  
-order: 05
+
+order: 04
 ---
 
-h1. Lab 05
+h1. lab 04
 
-h2. Inheritance
+h2. Rules of Sudoku
 
-h3. Inheritance Syntax
+The sudoku board has 9 rows and 9 columns.  The board is further broken down into 3x3 regions.  The goal of the game is to populate the board with numbers from 1 to 9 so that no duplicate numbers exist in any row, column or region.
 
-To indicate a class is a subclass of another:
+"More information on sudoku rules":http://www.sudoku.name/rules/en
 
-<pre>
-  <code>
-    #include "Customer.h"
+h2. Reading in Values
 
-    class FrequentCustomer : public Customer
-  </code>
-</pre>
+We need to be able to read in values one at a time and determine if they need to be placed in the board and if so, where.  We cannot rely on carriage returns or spaces, as the lab states that they may or may not be present.  So, the input could look like the sample input given in the lab description, or it could be a single line of numbers and dashes, or something in between.
 
-Here we see that FrequentCustomer is a subclass of Customer. FrequentCustomer inherits all the methods and attributes of Customer (except constructor and destructor).
+Also, we may want to convert the numbers into integers for further manipulation (although this is not necessary).
 
-h3. Pointers to Subclasses
+So, "here is a snippet of code that might help with reading in the values":http://people.eecs.ku.edu/~jvalland/268/files/lab04/input.txt  In this I am ultimately storing the values in a 2d array.
 
-We can have pointers of type base class point to the subclass type.
+h3. IStringStream
 
-<pre>
-  <code>
-    Customer c1;
-    EliteCustomer ec1;
-    Customer* cp1 = &c1;
-    // here's the pointer to a subclass
-    Customer* cp2 = &ec1;
-  </code>
-</pre>
+The istringstream class creates a stream from a string.  Allowing us to treat it as a stream and read in different values from it.  "More information about string stream":http://www.cplusplus.com/reference/iostream/stringstream/
 
-The main problem with this is that cp1 and cp2 are still just pointers to objects of type Customer, and so you can only call methods defined in the Customer class. 
- 
-<pre>
-  <code>
-    cp2->getName(); // fine if its defined in Customer
-    cp2->getEliteStatus(); // compile error
-  </code>
-</pre>
- 
-What's worse is that even if a method is reimplemented in the subclass, attempting to call that method will result in a call to the original implementation of the method
- 
-<pre><code>
-    cp2->talk() // actually calls the talk method of the Customer class.
-    
-</code></pre>
+You would need to include the sstream library and string library to use this method 
 
-h3. Virtual Methods
+"Here is a link":http://www.parashift.com/c++-faq-lite/misc-technical-issues.html#faq-39.2 to the C++ FAQ which indicates that string streams are the better way to convert strings to integers.  Also has a lot of other good information on C++
 
-So the solution for this problem is to declare the method as a virtual method in the base class.  This indicates to the compiler that a method could be overridden in the derived class, so check there first for an implementation.
+h2. DDD
 
-<pre>
-  <code>
-    class Customer
-    {
-      virtual std::string talk();
-      // note the virtual keyword.
-    };
-    
-    class EliteCustomer : public Customer
-    {
-      virtual std::string talk();
-      // overrides the talk() in Customer.
-    }
-    
-    // now the call to talk
-    cp2->talk();
-    // calls the correct talk method
-  </code>
-</pre>
+ddd might be useful to debug your program and see how the system executes.
 
-Useful "link for more information":http://www.cplusplus.com/doc/tutorial/polymorphism.html.
+Again, to use ddd, add the '-g' flag to the g++ statements of your makefile
 
-h3. Storing base class pointers in data structures
+After compiling your lab you can open it in ddd with
 
-This means you should be storing pointers to Customer in your Queue and Stack because they can point to instances of EliteCustomer and FrequentCustomer, so you'll need to implement only one version of both types.
+@ddd ./lab04@
 
-<pre>
-  <code>
-    class Stack
-    {
-    	typedef Customer* StackItemType;
-    	//...
-    	private:
-    	StackItemType* stack;
-  	};
-  	
-  	class Queue
-    {
-    	typedef Customer* QueueItemType;
+See the "Introduction Notes":http://people.eecs.ku.edu/~jvalland/268/intro.html for a overview of the basics of ddd.
 
-    	struct ListNode
-    	{
-    		QueueItemType item;
-    		ListNode* next;
-    	};
-    };
-  </code>
-</pre>
+h3. Adding command line arguments in ddd
 
-h2. Useful tips
+For this project, and most projects in eecs 268, you need to read in an input file from the command line (via @argv[1]@). To add this line in ddd:
 
-h3. A second virtual member
+Click on *Program* and then *Run...*
 
-To facilitate the requirements of the output printCurrentCustomer() method, which requires the level of the customer to be output, add another virtual method to the Customer class:
+Type in the filename in the *Run with Arguments* pane.
 
-<pre><code>
-  class Customer
-  {
-    //...
-    virtual std::string getCustomerDescription();
-  }
-  
-</code></pre>
+Click "Run"
 
-This can be used to store the class of the customer, and then can be overridden in the derived classes.
+h3. Viewing variables in ddd
 
-h3. Exception Handling
+When you want to watch the value of a variable, this can be easily done inside ddd.
 
-Probably the easiest/cleanest way to deal with problems in this lab.  Create a simple exception class, as in the previous lab, and then throw an exception when a problem is encountered.  Catch this exception in main and output the error message, then continue reading in commands.
+If you just want to see the value of a variable once, you can hover over the name of that variable and it will appear (Remember, your program has to be 'running' inside ddd for anything to work)
 
-Remember, you should be dealing with the exceptions thrown by the stack and queue code as well.
+If you want to watch the value over an extended period of time you can:
 
-h3. Dynamic Allocation
+Right-click on the variable name
 
-You do not know how many Customers / EliteCustomers / FrequentCustomers you will be reading in.  So these all should be allocated dynamically, each time a new one is needed.  And again, you should be storing Customer pointers in your Stack and Queue.
+Select *Display <variable name>*
 
-h3. getCurrentCustomer() Method
+Another pane will appear above your source code with a box containing the value of the variable you are displaying.  This box can be moved around to allow multiple variables to be viewed.
 
-You'll be finding the current customer in multiple places (when finishing, when printing, etc) -- encapsulate your process of getting the current customer in a method, so you only have to implement it once! 
+h3. Backtrace
+
+After a few recursive calls, it would be nice to see how any particular call was entered and the variable values during that recursion.  Here the backtrace can be very useful.
+
+Click on the "Status" Dropdown menu
+
+Click on "Backtrace"
+
+You can now move up and down the stack, using the Up and Down buttons. At each level of the backtrace, you can see the variable values by hovering over them or displaying them as described above
+
