added exam review, cpp inheritance link, notes

--- a/content/labs/lab07.textile
+++ b/content/labs/lab07.textile
@@ -9,6 +9,12 @@ filter:
 order: 07
 ---
 
+h2. Link to Lower level Inheritance Stuff
+
+I found this useful:
+
+"C++ Polymorphism":http://www.alexandersandler.net/how-inheritance-encapsulation-and-polymorphism-work-in-cpp
+
 h2. Useful String Methods
 
 h3. find
